--- a/frontend/src/styles/queries.css
+++ b/frontend/src/styles/queries.css
@@ -270,6 +270,18 @@
   }
 }
 
+.search-input {
+  width: 200px; /* Adjust width as needed */
+  padding: 8px 30px 8px 10px;
+  border: none;
+  border-radius: 20px;
+  background-color: #f8f9fa;
+  color: #495057;
+  font-size: 14px;
+  outline: none;
+  margin-right: 16px;
+}
+
 /* *************************** */
 /* Below 704px(Tablets-Small) */
 /* *************************** */
